<resources>
    <string name="app_name">TomTom</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_main">Sound Cloud</string>
    <string name="error_failed_update">Failed to update the profile</string>
    <string name="soundcloud_profile">SoundCloud Profile</string>
    <string name="profile_add_user">Add New</string>
    <string name="error_no_user_in_db">No SoundCloud User has been selected</string>
    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="profile_add_user_dialog">Add A New SoundCloud User</string>
    <string name="dialog_add_user_prompt">Add a new user by entering their user id</string>
    <string name="profile_add_new_user">Add New User</string>
    <string name="profile_add_user_dialog_id">User ID:</string>
    <string name="profile_add_user_edit_hint">3207</string>
    <string name="action_cancel">CANCEL</string>
    <string name="dialog_add">ADD</string>
    <string name="clientid">27788325952ad0133b4b23f48dcec485</string>
    <string name="error_failed_get_user">Failed to retrieve SoundCloud User</string>
    <string name="zero">0</string>
    <string name="action_remove">REMOVE USER</string>
    <string name="action_tracks">VIEW TRACKS</string>
    <string name="offline">Offline</string>
    <string name="error_no_user_selected">No SoundCloud User has been added</string>
    <string name="soundcloud_favourite_tracks">Favourite Tracks</string>
    <string name="error_tracks_null">No favourite tracks have been found</string>
    <string name="action_retry">retry</string>
    <string name="error_tracks_network_error">A Network Failure has occured. No Tracks have been retireved</string>
    <string name="track_username">User Name</string>
    <string name="track_name">Track name</string>
    <string name="trac_description">Track Description</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_user">Add User</string>
    <string name="action_remove_user">Remove User</string>
    <string name="about_heading_info">TomTom Graduate Application</string>
    <string name="about_create_by">created by: Michael Wright</string>
    <string name="app_version">version: 1.0.1</string>
    <string name="dialog_ok">OK</string>
    <string name="error_tracks_network_unsuccessfull">Failed to retrieve tracks from the server. Unsuccessfull.</string>
    <string name="error_user_network_failure">Failed to fetch user from server.</string>
</resources>
