<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_white_background"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical"
    android:padding="@dimen/dialog_standard_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/soundcloud_small" />

        <TextView
            style="@style/text_bold_med"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/textview_standard_padding"
            android:text="@string/profile_add_user_dialog"
            android:textColor="@color/dialog_blue" />
    </LinearLayout>

    <TextView
        style="@style/text_med"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_standard_padding_larger"
        android:text="@string/dialog_add_user_prompt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standard_margin">

        <TextView
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/margin_small"
            android:text="@string/profile_add_user_dialog_id" />

        <EditText
            android:id="@+id/edit_user_id"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/profile_add_user_edit_hint"
            android:minWidth="@dimen/edtxt_min_width"
            android:textColorHint="@color/divider_grey" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_button_layout_height"
        android:layout_margin="@dimen/dialog_standard_padding_larger"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            style="@style/text_med"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:minWidth="@dimen/dialog_button_width"
            android:text="@string/action_cancel"
            android:textAllCaps="true"
            android:textColor="@drawable/text_button_dialog_colors" />

        <TextView
            android:id="@+id/addUser"
            style="@style/text_med"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:minWidth="@dimen/dialog_button_width"
            android:text="@string/dialog_add"
            android:textAllCaps="true"
            android:textColor="@drawable/text_button_dialog_colors" />
    </LinearLayout>

</LinearLayout>