<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_white_background"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical"
    android:padding="@dimen/dialog_standard_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/about_image_width"
            android:layout_height="@dimen/about_image_height"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/batman" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                style="@style/text_bold_med"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/textview_standard_padding"
                android:text="@string/about_heading_info"
                android:textColor="@color/dialog_blue" />

            <TextView
                style="@style/text_med"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/textview_standard_padding"
                android:text="@string/about_create_by" />

            <TextView
                style="@style/text_med"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/textview_standard_padding"
                android:text="@string/app_version" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_button_layout_height"
        android:layout_margin="@dimen/dialog_standard_padding_larger"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ok"
            style="@style/text_med"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:minWidth="@dimen/dialog_button_width"
            android:text="@string/dialog_ok"
            android:textAllCaps="true"
            android:textColor="@drawable/text_button_dialog_colors" />
    </LinearLayout>

</LinearLayout>