<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/profile_card_margin_default"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:contentPadding="@dimen/cardview_default_contentPadding">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/track_picture_width"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/track_picture"
                    android:layout_width="@dimen/track_picture_width"
                    android:layout_height="@dimen/track_picture_height"
                    android:src="@drawable/soundcloud" />

                <TextView
                    android:id="@+id/track_user_name"
                    style="@style/text_tiny"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:lines="2"
                    android:paddingLeft="@dimen/margin_small"
                    android:text="@string/track_username"
                    android:textColor="@color/button_grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_small">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/track_name"
                        style="@style/text_tiny_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:text="@string/track_name" />

                    <TextView
                        android:id="@+id/track_description"
                        style="@style/text_tiny"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trac_description" />

                </LinearLayout>

                <LinearLayout
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end|bottom"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="end|bottom"
                    android:orientation="horizontal">

                    <com.tomtom.gradsoundcloud.view.widgets.LikeWidget
                        android:id="@+id/favourites_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.tomtom.gradsoundcloud.view.widgets.LikeWidget
                        android:id="@+id/playback_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginRight="@dimen/margin_small" />

                    <com.tomtom.gradsoundcloud.view.widgets.LikeWidget
                        android:id="@+id/comments_count"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>