<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/profile_card_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/profile_card_margin_default"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:contentPadding="@dimen/cardview_default_contentPadding">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="@dimen/profile_picture_width"
                    android:layout_height="@dimen/profile_picture_height"
                    android:src="@drawable/soundcloud" />

                <TextView
                    android:id="@+id/user_username"
                    style="@style/text_small"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:lines="2"
                    tools:text="Username" />

                <TextView
                    android:id="@+id/online_status"
                    style="@style/text_tiny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/offline" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/cardview_default_contentPadding">

                <TextView
                    android:id="@+id/user_name"
                    style="@style/text_bold_large"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    tools:text="Lorem Ipsum " />

                <TextView
                    android:id="@+id/user_city"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lines="1"
                    tools:text="Lorem Ipsum " />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/img_padding_small">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/img_padding_small"
                        android:src="@drawable/users" />

                    <TextView
                        android:id="@+id/user_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/img_padding_small"
                        android:paddingRight="@dimen/img_padding_small"
                        android:paddingTop="@dimen/img_padding_small"
                        android:text="@string/zero" />

                    <View
                        android:layout_width="@dimen/divider_width"
                        android:layout_height="match_parent"
                        android:background="@color/divider_grey"
                        android:paddingLeft="@dimen/divider_margin"
                        android:paddingRight="@dimen/divider_margin"
                        android:paddingTop="@dimen/img_padding_small" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/img_padding_small"
                        android:paddingRight="@dimen/img_padding_small"
                        android:paddingTop="@dimen/img_padding_small"
                        android:src="@drawable/music" />

                    <TextView
                        android:id="@+id/user_tracks"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/img_padding_small"
                        android:paddingRight="@dimen/img_padding_small"
                        android:paddingTop="@dimen/img_padding_small"
                        android:text="@string/zero" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dialog_button_layout_height"
                    android:layout_marginTop="@dimen/padding_largest"
                    android:gravity="end|bottom"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_large">

                    <TextView
                        android:id="@+id/remove"
                        style="@style/text_small"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:minWidth="@dimen/dialog_button_width"
                        android:paddingRight="@dimen/standard_padding"
                        android:text="@string/action_remove"
                        android:textAllCaps="true"
                        android:textColor="@drawable/text_button_card_colors" />

                    <View
                        android:layout_width="@dimen/divider_width"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/img_padding_small"
                        android:layout_marginTop="@dimen/img_padding_small"
                        android:background="@color/divider_grey" />

                    <TextView
                        android:id="@+id/tracks"
                        style="@style/text_small"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="2"
                        android:minWidth="@dimen/dialog_button_width"
                        android:paddingLeft="@dimen/standard_padding"
                        android:text="@string/action_tracks"
                        android:textAllCaps="true"
                        android:textColor="@drawable/text_button_card_colors" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>